# chat

./: README.md  docker-compose.yml  render.yaml
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/schemas/: events.py
backend/app/sio/: connection_manager.py  handlers.py  history_store.py  server.py
backend/tests/: test_sio_events.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/chat/: MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  UsersSidebar.tsx
frontend/src/components/layout/: ChatPage.tsx  LoginPage.tsx
frontend/src/components/ui/: ConnectionStatusBadge.tsx  Toast.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: SocketProvider.tsx  socketService.ts
frontend/src/store/: chatStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: socket.ts
